listed pokemon images

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,1 +1,30 @@
-<main class="page__main">@@label</main>
+<main class="page__main"></main>
+
+<h1>El juego de las parejas</h1>
+<div class="main_container">
+  <div>
+    <label for="four_cards">
+      <input class="input" id="four_cards" type="radio" value="4" name="number_of_cards" checked/>
+      4
+    </label>
+  </div>
+  <div>
+    <label for="six_cards">
+      <input class="input" id="six_cards" type="radio" value="6" name="number_of_cards" />
+      6
+    </label>
+  </div>
+  <div>
+    <label for="eight_cards">
+      <input class="input" id="eight_cards" type="radio" value="8" name="number_of_cards" />
+      8
+    </label>
+  </div>
+  <div class="btn">
+    <button class="start">Comenzar</button>
+  </div>
+</div>
+
+<div>
+  <ul class="cards_list">hello</ul>
+</div>
