--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -2,5 +2,15 @@
 
 body {
 	background: url('../images/logo-adalab-80px.png') center center no-repeat $color-white;
-	height: 100vh;
+  height: 100vh;
+  margin: 0;
+}
+
+.main_container {
+  display: flex;
+}
+
+.back_card {
+  background: url('https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB') center center no-repeat;
+  z-index: 0;
 }
