--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Adalab Web Starter Kit</title>
+	<title>Ejercicio reevaluación m2 Aránzazu Narváez</title>
   <link rel="icon" href="favicon.png"/>
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
