--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,7 +1,7 @@
 @import 'core/settings';
 
 body {
-	background: url('../images/logo-adalab-80px.png') center center no-repeat $color-white;
+	// background: url('../images/logo-adalab-80px.png') center center no-repeat $color-white;
   height: 100vh;
   margin: 0;
 }
@@ -10,7 +10,21 @@ body {
   display: flex;
 }
 
-.back_card {
-  background: url('https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB') center center no-repeat;
-  z-index: 0;
+.pokemon_photo {
+  width: 160px;
+  height: 195px;
+  border-radius: 5px;
+}
+
+.cards_list {
+  display: flex;
+  list-style: none;
+}
+
+.item_pokemon {
+  margin: 5px;
+}
+
+.hidden {
+  display: none;
 }
