--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -22,6 +22,12 @@ body {
 .pokemon_photo {
   width: 160px;
   height: 195px;
+  border: solid 1px black;
+  border-radius: 5px;
+}
+
+.adalab_photo {
+  border: solid 1px black;
   border-radius: 5px;
 }
 
