--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -15,6 +15,11 @@ body {
   justify-content: center;
 }
 
+.number_cards {
+  margin: 0;
+  padding-right: 15px;
+}
+
 .start {
   margin-left: 9px;
   padding: 5px;
